@@ -6,8 +6,6 @@ ifdstreambuf.yo
 milter.yo
 ofdstreambuf.yo
 
-Implement missing members of MailHeaders::const_hdr_iterator
-
 --
 
 
