@@ -1,4 +1,14 @@
+bobcat (2.13.00)
+
+  * Repaired bug in Arg detected by George Danchev sometimes causing segfaults
+    when an undefined long option is specified.
+
+  * Moved public MailHeaders::const_hdr_iterator members from mailheaders.ih
+    back to mailheaders
+
   * Cosmetic corrections to man-pages
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 02 Feb 2011 18:39:50 +0100
 
 bobcat (2.12.00)
 
